--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/sahid99/mini-pinterest#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.11",
     "morgan": "^1.10.0",
